--- a/style.css
+++ b/style.css
@@ -5,7 +5,20 @@
 .no-feed-displayed{
   font-weight: lighter;
   font-size: large;
-  padding:20px;
+  padding: 20px;
+  height: 20rem;
+}
+
+.hide{
+  color: rgba(255,255,255,0);
+}
+.show {
+  color: inherit;
+}
+.no-feed-displayed span {
+  transition-duration: .25s;
+  transition-timing-function: ease-in-out;
+  transition-property: all;
 }
 .entries {
   /*background-color: #ECECEC;*/
@@ -29,6 +42,7 @@
 }
 .entries img {
   max-width: 100%;
+  height:auto;
 }
 
 .entry{
@@ -108,7 +122,7 @@
   display:inline-block;
   padding-top:1em;
 }
-#feed-head > h2{
+#feed-head > h2 {
   display:inline;
 }
 
@@ -127,8 +141,7 @@
   margin:0px;
 }
 
-#orbital-feedlist ul li 
-{
+#orbital-feedlist ul li {
   margin-bottom: 0px; /*override something in main wp styles.*/
 }
 .feed, .tag {
@@ -136,9 +149,27 @@
 
 }
 #tags ul>li {
-  padding-left: 1em;
+  padding-left: 2em;
 }
-.feedcounter{
+a.orbital-treeindicator {
+  text-decoration: none;
+  outline: none;
+  display:inline-block;
+  color: #aaa;
+  width:1em;
+  transition-duration:.25s;
+  transition-timing-function:ease-in-out;
+  transition-property: all;
+}
+a.orbital-treeindicator.open {
+  color: #444;
+  transform:rotate(90deg);
+}
+a.orbital-treeindicator:hover {
+  color: #333;
+  transform:rotate(45deg);
+}
+.feedcounter {
   font-size: xx-small;
   vertical-align: top;
 }
@@ -185,15 +216,13 @@
  /* background-image: -moz-linear-gradient(center bottom, rgba(60, 60, 60, 0.7) , rgba(40, 40, 40, 0.6) 50px);*/
   position: fixed;
   top: 50px;
-  left: 200px;
+  left: 30%;
   border-radius: 20px;
   box-shadow: 2px 2px 8px #fff inset, 2px 2px 8px #000;
+  z-index:200;
 }
 .invisible{
   display: none;
-}
-#opml-form{
-  border-top: 1px dotted #000;
 }
 #orbital-content{
   position:absolute;
@@ -202,6 +231,7 @@
   min-width:30rem;
  /* background:#dedede;*/
   overflow-y:auto;
+  z-index:50;
 }
 /* Command Bar */
 #commandbar {
@@ -247,7 +277,7 @@
 
 }
 
-/*Subcriptions */
+/*Subscriptions */
 
 .horizontal-form label input{
   font-weight:normal;
@@ -264,7 +294,7 @@
 .horizontal-form input {
    display: block;
    padding: 5px;
-   width: 80%;
+   width: 90%;
 }
 .horizontal-form input[type='checkbox']{
    display: inline-block;
@@ -291,9 +321,41 @@
   width: fit-content;
   z-index:1000;
 }
+#opml-form{
+  border-top: 1px dotted #000;
+  display:ms-flexbox;
+  display:flex;
+  max-height:80%;
+}
+.upload-form {
+  max-width:20rem;
+}
+
+.opml-candidates {
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.7) 2%, rgba(255, 255, 255, 0.7) 98%, rgba(255, 255, 255, 0) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+  display: inline-block;
+  overflow-y:scroll;
+  padding: 5px;
+  max-height:20rem;
+}
+.opml-candidates li{
+   box-shadow: 1px 2px 5px;
+   margin: 10px;
+   padding: 5px;
+}
 
 #tagentry{
   display:inline;
+}
+/*
+ * these next two override regular wordpress styles
+ * because they stay in one place when you scroll
+ */
+.tagchecklist span {
+  padding-left: 1rem;
+}
+.tagchecklist span a {
+  position: relative;
 }
 .heading {
   font-size: large;
